# network-infra-auto

./: .gitignore  .gitlab-ci.yml  .sync_devices  Dockerfile  Pipfile  README.md  config.yaml  detect_cfg_change_in_mr.py  device_preconfig.md  hosts.yaml  nornir.yaml  nornir_sync_cfg_from_devices.py  nornir_sync_cfg_to_devices.py  pyproject.toml  report_changes.py  requirements.txt  sanitize_config.py  test_nornir.yaml  trigger_post_deploy.py
cfg/: tndo-c8k-1.cfg  tndo-c8k-2.cfg  tndo-n9k-1.cfg  tndo-n9k-2.cfg  tndo-xrv-1.cfg  tndo-xrv-2.cfg
ci/: sync-pipeline.yml
inventory/: groups.yaml  hosts.yaml
src/baseline_snmp/: __init__.py  sanitize_config.py  snmp_task.py
src/baseline_snmp/templates/: ios_snmp_config.j2  iosxr_snmp_config.j2  nxos_snmp_config.j2  snmp_config.j2
src/baseline_snmp/tests/: test_generate_config.py  test_snmp_task.py
src/baseline_snmp/vars/: groups.yaml  hosts.yaml
src/batch_LB/: config.yaml
src/batch_LB/app/: config.py  main.py  utils.py
src/batch_LB/app/api/: routes_request.py  routes_reset.py  routes_result.py
src/batch_LB/app/models/: ticket.py
src/batch_LB/app/services/: machine_manager.py  queue.py  task_processor.py  ticket_manager.py
src/batch_LB/scripts/: reset_machine.sh  run_server.sh  send_task.sh
src/config_utils/: __init__.py  filter_config.py  sanitize_config.py
src/config_utils/tests/: test_filter_config.py
src/infra_auto/: cli.py  netmiko_command.py
src/infra_auto/ci_utils/: gitlab_api.py
src/infra_auto/ci_utils/tasks/: __init__.py  detect_cfg_changes.py  report_changes.py  run_config.py  trigger_post_deploy_pipeline.py
src/infra_auto/commands/: __init__.py  apply_cfg_to_device_command.py  change_hostname_command.py  ci_command.py  execute_command.py  netmiko_command.py  nornir_command.py  sync_config_from_device_command.py
src/infra_auto/infra_nornir/: __init__.py  nornir_runner.py
src/infra_auto/task_runners/: __init__.py  change_hostname_runner.py  change_hostname_task_runner.py  execute_task_module_runner.py  nornir_runner.py
src/infra_auto/testbed/: execute.py
src/nornir_tasks/: __init__.py  napalm_apply_config_to_devices.py
test_cfg/: tndo-c8k-2.cfg
test_inventory/: groups.yaml  hosts.yaml
testbed/: nornir.yaml
testbed/cfg/: tndo-xrv-2.cfg
testbed/inventory/: defaults.yaml  groups.yaml  hosts.yaml
utility/: detect_cfg_change_in_mr.py  gitlab_api.py  report_changes.py  trigger_post_deploy.py
(+3 files in other folders)
