[project]
name = "network-infra-auto"
version = "0.1.0"
keywords = [
    "network",
    "automation",
    "infrastructure",
    "IaC",
    "nornir",
    "napalm",
]
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "John Doe", email = "raccoon.li@ain.training" }]
dependencies = [
    "nornir>=3.5.0",
    "napalm>=5.0.0",
    "nornir-napalm>=0.5.0",
    "nornir-utils>=0.2.0",
    "requests>=2.32.0",
]

[project.scripts]
infra-auto = "infra_auto.cli:main"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
