[project]
name = "network-infra-auto"
version = "0.1.0"
keywords = [
    "network",
    "automation",
    "infrastructure",
    "IaC",
    "nornir",
    "napalm",
]
requires-python = "~=3.12"
license = { text = "Proprietary" }
authors = [{ name = "BoHong Li", email = "raccoon.li@ain.training" }]
dependencies = [
    "napalm>=5.0.0",
    "netmiko>=4.5.0",
    "nornir>=3.5.0",
    "nornir-napalm>=0.5.0",
    "nornir-utils>=0.2.0",
    "requests>=2.32.3",
]
[project.scripts]
infra-auto = "infra_auto.cli:main"

[tool.uv]
package = true
